# UROP_IEEE_cache_optimised_Decomposible_WInograd

./: .gitignore  COMPARISON_SUMMARY.md  LICENSE  README.md  RESEARCH_PAPER.md  RESEARCH_PAPER_OUTLINE.md  RUN_INSTRUCTIONS.md  arith_complexity_plot.py  arith_complexity_plot_large.py  arithmetic_complexity_plot.py  cifar100_analysis.py  cnn_variant_comparison.py  complexity_analysis_portrait.py  energy_aware_cnn_architecture.py  energy_bounds_visualization.py  energy_consumption_analysis.py  energy_consumption_portrait.py  energy_latency_3d.py  energy_plot.py  energy_reduction.py  energy_simulation_validation.py  fpga_thermal_analysis.py  frequency_response.py  ieee_energy_plot_v2.py  jetson_energy_monitor.py  performance_comparison.py  quick_comparison.py  requirements.txt  run_all_models.py  run_comparison.sh  simplified_analysis.py  train_all_models.sh
Initial our proposed model/lightweight_cnn_project/: README.md  WINOGRAD_COMPARISON.md  best_model.ckpt  pyproject.toml  requirements.txt  setup.cfg
Initial our proposed model/lightweight_cnn_project/src/lightweight_cnn/: improved_model.py  macs.py  model.py  model_memory_optimized.py  model_standard.py  model_winograd.py  utils.py
Initial our proposed model/lightweight_cnn_project/src/scripts/: compare_winograd.py  evaluate.py  export_onnx.py  measure_params_macs.py  train.py  train_and_compare.py  train_improved.py  train_standard.py  train_winograd.py
Initial our proposed model/lightweight_cnn_project/src/tests/: test_count_params.py  test_forward_shape.py
ResNet-18 inference/: QUICKSTART.md  README.md
(+23 files in other folders)
